Add search by the table veiw

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -40,6 +40,7 @@
                     </select>
                     </td>
                     <td style="width:16%">
+                    <!-- Change by junyi 2022 0620-->
                     <form id="ctform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
                     <select id="opt_prediction" class="multibox" multiple="multiple" name="name_tbv_celltype">
                             <option label=" "></option>
