--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -98,6 +98,7 @@
     {
       geodata: am4geodata_worldLow,
       projection: "Miller",
+      deltaLongitude: -160,
       series: [
         {
           type: "MapPolygonSeries",
