--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -113,6 +113,10 @@
                 <h4>
        Please choose any of the option below for data manipulation.
     </h4>
+
+    <button class="btn btn-primary" name="refresh_table" type="submit" style="display:inline-block" onclick="window.location.href='{{ url_for( 'frontend.index') }}';"> Return to Home </button>
+    <button class="btn btn-primary" name="refresh_table" type="submit" style="display:inline-block" onclick="window.location.href='{{ url_for( 'tasks.table_view', main='')}}';"> Refresh table </button>
+
     <form action="{{ url_for('tasks.download_meta')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download" type="submit"> Download metadata </button>
     </form>
@@ -149,7 +153,7 @@ $(document).ready(function() {
                 'serverSide': true,
                 'serverMethod': 'post',
                 'ajax': {
-                    'url':'{{ url_for('tasks.api_db')}}'
+                    'url':'{{ url_for('tasks.api_db', main=link)}}',
                 },
                 'lengthMenu': [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
                 searching: true,
