--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -121,6 +121,8 @@
 
     <div class="jumbotron">
        <h4>Please choose any of the option below for data manipulation.</h4>
+
+    <!-- Edited by Junyi 0628 -->
     <form action="{{ url_for('tasks.download_meta')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download" type="submit"> Download metadata </button>
     </form>
