--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -1,184 +1,223 @@
-{% from "macros/_form.html" import render_form %}
+{% from "macros/_form.html" import render_form %} {% set page_title = 'Home' %}
+{% extends 'layouts/base.html' %} {% block body %} {% include
+'layouts/banner.html' %}
 
-{% set page_title = 'Home' %}
-
-{% extends 'layouts/base.html' %}
-
-{% block body %}
-{% include 'layouts/banner.html' %}
 <div class="container">
   <div class="row justify-content-center">
     <div class="intro-h">Dataset distribution</div>
-    <div id="chartdiv" style="width:100vw; height:100vh;"></div>
+    <div id="map" style="width: 100vw; height: 100vh"></div>
   </div>
 </div>
 
 <div class="section01">
+
   <div class="container flex-column">
-  <div class="intro-h">
-    What is the D²4H Single-cell Data Share?
+    <div class="intro-h">What is the D²4H Single-cell Data Share?</div>
+    <div class="intro-c">
+      The D²4H Single-cell Data Share stores and provides over 3.2 million
+      single-cell data by 21 published single-cell sequencing datasets. Anyone
+      can explore the insights from our analysis and download the data provided
+      here for further analysis.
+    </div>
+    <div class="d-flex justify-content-center">
+      <table class="intro-tb">
+        <tr>
+          <td>
+            <img
+              src="{{url_for('static', filename='newspaper.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+          <td></td>
+          <td>
+            <img
+              src="{{url_for('static', filename='explore.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+          <td></td>
+          <td>
+            <img
+              src="{{url_for('static', filename='folder.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Insight</p>
+          </td>
+          <td></td>
+          <td>
+            <p>Expore data</p>
+          </td>
+          <td></td>
+          <td>
+            <p>Download and Citation</p>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
-  <div class="intro-c">
-
-    The D²4H Single-cell Data Share stores and provides over 5 million single-cell data by 21 published single-cell sequencing datasets. Anyone can explore the insights from our analysis and download the data provided here for further analysis.
-
-  </div>
-  <div class="d-flex justify-content-center">
-  <table class="intro-tb">
-    <tr>
-      <td><img src="{{url_for('static', filename='newspaper.png')}}" width="140" height="140"/></td>
-      <td></td>
-      <td><img src="{{url_for('static', filename='explore.png')}}" width="140" height="140"/></td>
-      <td></td>
-      <td><img src="{{url_for('static', filename='folder.png')}}" width="140" height="140"/></td>
-    </tr>
-    <tr>
-      <td>
-        <p>Insight</p>
-      </td>
-      <td></td>
-      <td>
-        <p>Expore data</p>
-      </td>
-      <td></td>
-      <td>
-        <p>Download and Citation</p>
-      </td>
-    </tr>
-  </table>
-</div>
-</div>
 </div>
 
 <div class="section02">
   <div class="container flex-column">
-  <div class="intro-h">
-    D²4H Single-cell Data Share Life Cycle
-  </div>
-  <div class="intro-c">
-    The D²4H Single-cell Data Share provides a platform for sharing single-cell data. We welcome anyone to contribute on our data sharing coummuniaty.
-  </div>
-  <div class="d-flex justify-content-center">
-  <table class="intro-tb">
-    <tr>
-      <td><img src="{{url_for('static', filename='folder-3.png')}}" width="140" height="140"/></td>
-      <td><img src="{{url_for('static', filename='Pointer.png')}}" width="95" height="95"/></td>
-      <td><img src="{{url_for('static', filename='microscope.png')}}" width="140" height="140"/></td>
-      <td><img src="{{url_for('static', filename='Pointer.png')}}" width="95" height="95"/></td>
-      <td><img src="{{url_for('static', filename='folder-2.png')}}" width="140" height="140"/></td>
-    </tr>
-    <tr>
-      <td>
-        <p>Users contribute single-cell data</p>
-      </td>
-      <td></td>
-      <td>
-        <p>D²4H processes the data</p>
-      </td>
-      <td></td>
-      <td>
-        <p>Users can find suitable data to download </p>
-      </td>
-    </tr>
-  </table>
+    <div class="intro-h">D²4H Single-cell Data Share Life Cycle</div>
+    <div class="intro-c">
+      The D²4H Single-cell Data Share provides a platform for sharing
+      single-cell data. We welcome anyone to contribute on our data sharing
+      coummuniaty.
+    </div>
+    <div class="d-flex justify-content-center">
+      <table class="intro-tb">
+        <tr>
+          <td>
+            <img
+              src="{{url_for('static', filename='folder-3.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+          <td>
+            <img
+              src="{{url_for('static', filename='Pointer.png')}}"
+              width="95"
+              height="95"
+            />
+          </td>
+          <td>
+            <img
+              src="{{url_for('static', filename='microscope.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+          <td>
+            <img
+              src="{{url_for('static', filename='Pointer.png')}}"
+              width="95"
+              height="95"
+            />
+          </td>
+          <td>
+            <img
+              src="{{url_for('static', filename='folder-2.png')}}"
+              width="140"
+              height="140"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Users contribute single-cell data</p>
+          </td>
+          <td></td>
+          <td>
+            <p>D²4H processes the data</p>
+          </td>
+          <td></td>
+          <td>
+            <p>Users can find suitable data to download</p>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
-</div>
-{% endblock %}
-
-{% block scripts %}
+{% endblock %} {% block scripts %}
 
 <script src="https://www.amcharts.com/lib/4/core.js"></script>
 <script src="https://www.amcharts.com/lib/4/maps.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
 <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
-
 <script>
-  am4core.useTheme(am4themes_animated);
-  var map = am4core.createFromConfig(
-    {
-      geodata: am4geodata_worldLow,
-      projection: "Miller",
-      series: [
-        {
-          type: "MapPolygonSeries",
-          useGeodata: true,
-          exclude: ["AQ"],
-          mapPolygons: {
-            tooltipText: "{name}: {value}",
-            fill: "rgba(110, 166, 157, 0.5)",
-            states: {
-              hover: {
-                properties: {
-                  fill: "#489587",
-                },
-              },
-            },
-          },
-          heatRules: [{
-            "target": "mapPolygons.template",
-            "property": "fill",
-            "min": "#1CC5DC",
-            "max": "#AA2EE6",
-            "dataField": "value"
-        }],
-          data: [
-            {
-              id: "US",
-              value: 12,
-            },
-            {
-              id: "DE",
-              value: 2,
-            },
-            {
-              id: "IL",
-              value: 1,
-            },
-            {
-              id: "UK",
-              value: 2,
-            },
-            {
-              id: "KR",
-              value: 1,
-            },
-            {
-              id: "CN",
-              value: 3,
-            },
-            {
-              id: "NL",
-              value: 1,
-            },
-            {
-              id: "FR",
-              value: 1,
-            },
-            {
-              id: "CA",
-              value: 1,
-            },
-          ],
-        },
-      ],
-      titles: [{
-        "text": "Dataset distribution by Region",
-        "fontFamily": "Inter",
-        "fontSize": 25,
-        "fill": "#275950",
-        "align": "left",
-        "paddingTop": 40,
-        "paddingLeft": 30,
-    }],
-    },
-    "chartdiv",
-    am4maps.MapChart
-  );
-  var heatLegend = map.createChild(am4charts.HeatLegend);
-</script>
 
-    
+   // Create map instance
+   const chart = am4core.create("map", am4maps.MapChart);
+
+   // Set map definition
+   chart.geodata = am4geodata_worldLow;
+
+   // Set projection
+   chart.projection = new am4maps.projections.Miller();
+
+   chart.deltaLongitude = -160;
+
+   const title = chart.titles.create();
+
+   title.text = "Dataset distribution by Region";
+   title.fontFamily = "Inter";
+   title.fontSize = 25;
+   title.fill = am4core.color("#275950");
+   title.align = "left";
+   title.paddingTop = 40;
+   title.paddingLeft = 30;
+
+   // Create map polygon series
+   const polygonSeries = chart.series.push(new am4maps.MapPolygonSeries());
+
+   // Exclude Antartica
+   polygonSeries.exclude = ["AQ"];
+
+   // Make map load polygon (like country names) data from GeoJSON
+   polygonSeries.useGeodata = true;
+
+   // Configure series
+   const polygonTemplate = polygonSeries.mapPolygons.template;
+
+   polygonTemplate.tooltipHTML = '<b>{name}: {value}</b><br><a href="https://en.wikipedia.org/wiki/{name.urlEncode()}">Explore more</a>';
+   polygonTemplate.fill = am4core.color("rgba(110, 166, 157, 0.5)");
+
+   // Create hover state and set alternative fill color
+   const hs = polygonTemplate.states.create("hover");
+   hs.properties.fill = am4core.color("#489587");
+
+   // Set up tooltips
+   polygonSeries.calculateVisualCenter = true;
+   polygonTemplate.tooltipPosition = "fixed";
+   polygonSeries.tooltip.label.interactionsEnabled = true;
+   polygonSeries.tooltip.keepTargetHover = true;
+
+   // heatRules
+   polygonSeries.heatRules.push({
+     "target": polygonSeries.mapPolygons.template,
+     "property": "fill",
+     "min": am4core.color("#1CC5DC"),
+     "max": am4core.color("#AA2EE6"),
+     "dataField": "value",
+   });
+
+   // value
+     const data = {{ data|tojson }}
+     const objs = []
+
+     for ( let country in data["Country Code"]) {
+       let obj = {id: data["Country Code"][country], value: 1}
+       console.log(obj)
+       if (objs.length > 0) {
+        for (let j = 0; j < objs.length; j++) {
+          if (objs[j].id == obj.id) {
+            let k = objs[j].value;
+            objs[j].value = k + 1;
+            break;
+          } else if (j == objs.length - 1) {
+            objs.push(obj);
+            break;
+          }
+        }
+      } else {
+        objs.push(obj)
+      }
+     }
+     console.log(objs);
+
+
+   polygonSeries.data = objs;
+</script>
 
 {% endblock %}
