making a dataset navigation table in landing page

--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -2,10 +2,10 @@
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Home</a>
+      <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
     <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore Data Types</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore Data</a>
           <!-- .dropdown-menu 下拉選單內容 -->
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{{ url_for('tasks.table_view') }}">scRNA-seq</a>
