--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -145,7 +145,7 @@
     <!-- <form action="{{ url_for('tasks.show_plot')}}" method="get" style="display:inline-block">
       <button class="btn btn-primary" name="show_plot" type="submit"> Show UMAP plot </button>
     </form> -->
-    <button class="btn btn-primary" name="refresh_table" type="submit" style="display:inline-block" onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"> Return to Home </button>
+    <button class="btn btn-primary" name="show_plot" type="submit" style="display:inline-block" onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"> Show UMAP Plot </button>
 
 
     <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block">
